--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,6 +26,8 @@
   <a href="https://www.alxafrica.com/" target="_blank" rel="noopener noreferrer">
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
   </a>
+
+  <p><a href="tweets.html">Check out my tweets →</a></p>
 </body>
 
 </html>
