Restructure HTML files with header, main, footer, article, and aside

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,29 +8,44 @@
 </head>
 
 <body>
-  <h1>Welcome to My Cool First Webpage</h1>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <h2>About This Page</h2>
-  <p>This is my very first cool webpage. I am learning HTML and this is part of my journey.</p>
+  <main>
+    <article>
+      <h1>Welcome to My Cool First Webpage</h1>
 
-  <h3>My Experience So Far</h3>
-  <p>Working with VS Code and GitHub is quite exciting. I'm learning how to structure pages and push code to the cloud.
-  </p>
+      <h2>About This Page</h2>
+      <p>This is my very first cool webpage. I am learning HTML and this is part of my journey.</p>
 
-  <p>HTML is easy to get started with, but there’s so much to explore. Headings, paragraphs, links, and images are just
-    the beginning.</p>
+      <h3>My Experience So Far</h3>
+      <p>Working with VS Code and GitHub is quite exciting. I'm learning how to structure pages and push code to the
+        cloud.</p>
 
-  <p>Stay tuned! I’ll be adding more awesome features to this webpage as I grow in my web development skills.</p>
+      <p>HTML is easy to get started with, but there’s so much to explore. Headings, paragraphs, links, and images are
+        just the beginning.</p>
 
-  <h2>Check This Out!</h2>
-  <a href="https://www.alxafrica.com/" target="_blank" rel="noopener noreferrer">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
+      <p>Stay tuned! I’ll be adding more awesome features to this webpage as I grow in my web development skills.</p>
 
-  <p><a href="tweets.html">Check out my tweets →</a></p>
+      <h2>Check This Out!</h2>
+      <a href="https://www.alxafrica.com/" target="_blank" rel="noopener noreferrer">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+      </a>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Rebi Edward Akpa - <a href="https://github.com/RebiLee001" target="_blank"
+        rel="noopener noreferrer">here</a></p>
+  </footer>
 </body>
 
 </html>
-<!-- This is a simple HTML page to showcase my first cool webpage. -->
-<!-- It includes headings, paragraphs, and a link to the ALX Africa website. -->
-<!-- The page is structured with a title and various sections to demonstrate basic HTML skills. -->
