--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -8,22 +8,38 @@
 </head>
 
 <body>
-  <h1>Here’s What I’ve Been Tweeting</h1>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <!-- Embedded Tweet -->
-  <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">Great leaders are not born—they're made. 💥 <br><br>At ALX, we empower the next generation of
-      leaders with the mindset and tools to shape the future. Are you ready?<a
-        href="https://t.co/MYqN5ZkJmY">https://t.co/MYqN5ZkJmY</a></p>
-    &mdash; ALX (@alx_africa) <a
-      href="https://twitter.com/alx_africa/status/1774758041101644159?ref_src=twsrc%5Etfw">April 1, 2024</a>
-  </blockquote>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <main>
+    <article>
+      <h1>Here’s What I’ve Been Tweeting</h1>
 
-  <!-- Link to homepage -->
-  <p><a href="index.html">← Back to Home</a></p>
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">Great leaders are not born—they're made. 💥 <br><br>At ALX, we empower the next
+          generation of leaders with the mindset and tools to shape the future. Are you ready?<a
+            href="https://t.co/MYqN5ZkJmY">https://t.co/MYqN5ZkJmY</a></p>
+        &mdash; ALX (@alx_africa) <a
+          href="https://twitter.com/alx_africa/status/1774758041101644159?ref_src=twsrc%5Etfw">April 1, 2024</a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+      <p><a href="index.html">← Back to Home</a></p>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Rebi Edward Akpa - <a href="https://github.com/RebiLee001" target="_blank"
+        rel="noopener noreferrer">here</a></p>
+  </footer>
 </body>
 
 </html>
-<!-- This HTML page showcases a tweet from ALX Africa, demonstrating how to embed tweets in a webpage. -->
-<!-- It includes a link back to the homepage for easy navigation. -->
